@@ -1,3 +1,7 @@
+2003-04-24  Ethan Merritt <merritt@u.washington.edu>
+	* src/win/wgraph.c: Tweak previous correction to saved pen color
+	so that it applies cleanly to box fill as well.
+
 2003-04-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
 	* src/win/wgraph.c (drawgraph): Fix signedness bug exposed by
